sdo/eclipselink.sdo.test/resource/org/eclipse/persistence/testing/sdo/helper/classgen/invalidtypename/defaultPackage/Company.java
package defaultPackage;

public interface Company {

   public defaultPackage.InvalidClassname getInvalidClassname();

   public void setInvalidClassname(defaultPackage.InvalidClassname value);

   public defaultPackage.InvalidClassname1 getInvalidClassname1();

   public void setInvalidClassname1(defaultPackage.InvalidClassname1 value);

   public java.util.List getPorder();

   public void setPorder(java.util.List value);

   public java.util.List getItem();

   public void setItem(java.util.List value);

   public java.lang.String getName();

   public void setName(java.lang.String value);


}

